--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_native_splash: ^2.2.18
   flutter_launcher_icons: "^0.12.0"
-  tflite: ^1.1.2
+  tflite_flutter: ^0.9.0
+
 
 dev_dependencies:
   flutter_test:
@@ -76,6 +77,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - assets/
+    - assets/models/model_Bind.tflite
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
