--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,9 +57,9 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/valeer_launcher_icon.png"
+  image_path: "assets/launcher_icon.png"
 #  adaptive_icon_background: "#1f24251"
-#  adaptive_icon_foreground: "assets/valeer_logo.png"
+#  adaptive_icon_foreground: "assets/launcher_icon.png"
 
 
 
